--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,12 @@ name = "pypi"
 
 [packages]
 ipykernel = "*"
-"5f8426c" = {file = "https://github.com/stanfordnmbl/osim-rl/archive/master.zip"}
 opensim = {path = "/home/ubuntu/opensim-4.0.0/lib/python3.6/site-packages"}
 pyvirtualdisplay = "*"
 matplotlib = "*"
+"5f8426c" = {file = "https://github.com/stanfordnmbl/osim-rl/archive/master.zip"}
+torch = {file = "http://download.pytorch.org/whl/cpu/torch-0.4.1-cp36-cp36m-linux_x86_64.whl"}
+pandas = "*"
 
 [dev-packages]
 
