--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ torch = {file = "http://download.pytorch.org/whl/cpu/torch-0.4.1-cp36-cp36m-linu
 pandas = "*"
 tqdm = "*"
 tables = "*"
+pymongo = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
